# C-and-Cpp-Tests-with-CI-CD-Example

./: CMakeLists.txt  doc.txt  integration-test.c  lib.c  makefile  test-library.c
.github/workflows/: ci.yml
